# PulseEngine

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CROSS_PLATFORM_FMA.md  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  ENHANCED_ARCHITECTURE.md  FAILURE_MODE_ANALYSIS.md  FMA_ACTION_GUIDE.md  GETTING_STARTED.md  IBKR_SESSION_AUTH.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MOBILE_ACTION_GUIDE.md  NETLIFY_SUPABASE_AUDIT.md  QUICKSTART.md  README.md  ROADMAP.md  TOOLS.md  TRADING_ARCHITECTURE.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-supabase.yml
backend/: .env.example  .gitignore  README.md
backend/shared/constants/: index.ts
backend/shared/lib/: broker-adapter-factory.ts  ibkr-session-auth.ts  oauth2-manager.ts  universal-oauth2-manager.ts
backend/shared/types/: index.ts
backend/shared/validators/: index.ts
backend/supabase/: .supabaseignore  config.toml
backend/supabase/migrations/: 001_initial_schema.sql  20250101000000_initial_schema.sql  20250102000000_trading_platform.sql  20250103000000_profiles_and_credits.sql  20250104000000_payment_webhook_fields.sql  20250105000000_add_idempotency_to_orders.sql  20250106000000_market_data_rpc.sql
backend/workers/: README.md
backend/workers/alerts/: index.ts
backend/workers/broker/: index.ts
backend/workers/payment/: index.ts
core/: __init__.py
core/backtester/: __init__.py  engine.py
core/greeks/: __init__.py  options_greeks.py
core/optimizer/: __init__.py  strategy_optimizer.py
core/paper_trader/: __init__.py  paper_trader.py
examples/: README.md  moving_average_strategy.py  options_greeks_examples.py  paper_trading_simulation.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ErrorBoundary.jsx  (+1 more)
patches/: 001-env-validation.patch  002-cors-security.patch  003-xss-protection.patch  004-rate-limiting.patch  005-tool-parameter-validation.patch  006-circuit-breaker.patch  007-database-transactions.patch  008-timeout-handling.patch  009-webhook-replay-protection.patch  010-idempotency-validation.patch  011-token-refresh-fixes.patch  012-order-persistence.patch  013-connection-pooling.patch  014-profile-creation-fix.patch  015-crypto-verification.patch  IMPLEMENTATION_SUMMARY.md  README.md
(+38 files in other folders)
