[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-engine"
version = "0.1.0"
description = "3-layered trading bot platform with backtesting, optimization, and paper trading"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PulseEngine Team"}
]
keywords = ["trading", "backtesting", "paper-trading", "options", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
api = [
    "supabase>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
data = [
    "yfinance>=0.2.28",
    "requests>=2.31.0",
]
analytics = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]
all = [
    "pulse-engine[api,data,analytics,dev]",
]

[project.urls]
Homepage = "https://github.com/jetgause/PulseEngine"
Repository = "https://github.com/jetgause/PulseEngine"
Issues = "https://github.com/jetgause/PulseEngine/issues"

[tool.setuptools]
packages = ["core", "core.backtester", "core.greeks", "core.optimizer", "core.paper_trader"]

[tool.setuptools.package-data]
core = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
